can add post, add simple comment, login and register  is connected to mongodb database, organized the file

--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -27,9 +27,11 @@
 .likecomment{
     display : flex;
     align-items: center;
+    cursor:pointer;
 }
 
 .likecomment > p{
     margin-left: 5px;
 }
+
 
