--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -4,7 +4,8 @@
     flex:0.6;
     justify-content: center; /* Center horizontally */
     align-items: center;    /* Center vertically */
-    height: 100vh;
+    
+    
 }
 
 .form-container{
@@ -13,11 +14,86 @@
     flex:0.6;
     justify-content: center; /* Center horizontally */
     align-items: center;    /* Center vertically */
-    height: 100vh;
-}
-.to-register{
-    display:flex;
-    align-items:center;
-    justify-content: center;
+    
+    height:100vh;
+    
 }
 
+.kotak{
+    display: flex;
+    justify-content: center;
+    border: 2px solid gray;
+    border-radius: 25px;
+    padding:50px;
+    
+}
+
+
+
+.to-center {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.to-center > button {
+    width: 200px;
+    padding: 10px;
+    font-weight: bold;
+    font-size: 15px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(0, 128, 208);
+    color: aliceblue;
+    outline: none;
+    cursor: pointer;
+}
+
+.to-center > h2{
+    font-size: medium;
+    color: red;
+}
+
+.screen{
+    height: 100vh;
+}
+
+.info{
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    max-width: 100%;
+}
+
+.info > h2{
+    font-size: 30px;
+}
+
+.info > input{
+    max-width: 100%;
+    flex: 1;
+    padding: 10px;
+    font-size: 30px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    background-color: aliceblue;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    outline:none;
+}
+
+.logo{
+    width: 150px;
+    height: 150px;
+}
+
+.logo_container{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
